# Mechanatee

./: README.md  test_configure_navigator_board.sh
ros2navigator_bridge/: Cargo.toml  build.rs
ros2navigator_bridge/src/: lib.rs  main.rs
ros2navigator_bridge/src/msg/: Cargo.toml  compass_heading.rs  imu_data.rs  lib.rs  magnetometer_data.rs  mod.rs  pressure_data.rs
ros_ws/src/can_bridge/: package.xml  setup.cfg  setup.py
ros_ws/src/can_bridge/can_bridge/: motor_control_topic.py  parameter_tuner.py  ros2can_bridge.py
ros_ws/src/can_bridge/can_bridge.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
ros_ws/src/can_bridge/launch/: can_bridge.launch.xml
ros_ws/src/log/: latest_build
