[package]
name = "ros2navigator_bridge"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# Binary configuration
[[bin]]
name = "ros2navigator_bridge"
path = "src/main.rs"

[dependencies]
rclrs = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.11"
navigator-rs = { version = "0.3.2" }
anyhow = "1.0"
rosidl_runtime_rs = { version = "0.4.1", features = ["serde"] }
ros2navigator_bridge_msgs = { path = "src/msg" }
rosidl_typesupport_c = { path = "/opt/ros/humble/lib/rosidl_typesupport_c" }